kubernetes/apps/wordpress/wordpress/app/ingress-route.yaml
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: wordpress
  namespace: wordpress
  annotations:
    kubernetes.io/ingress.class: traefik
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`lindseyb.me`)
      kind: Rule
      services:
        - name: wordpress
          port: 80
 #     middlewares:
 #       - name: default-headers
  tls:
    secretName: lindseyb-me-production-tls
