kubernetes/apps/wordpress/wordpress/app/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: wordpress
  namespace: wordpress
  annotations:
    #external-dns.alpha.kubernetes.io/target: "external.${SECRET_DOMAIN}"
    #external-dns.home.arpa/enabled: "true"
spec:
  ingressClassName: internal
  tls:
  - hosts:
    - "${SECRET_DOMAIN}"
    secretName: ${LINS_SECRET_DOMAIN/./-}-production-tls
  rules:
  - host: "${LINS_SECRET_DOMAIN}"
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: wordpress
            port:
              number: 80
